slash/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slash
  labels:
    app.kubernetes.io/version: v1
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: slash
  template:
    metadata:
      labels:
        app: slash
        app.kubernetes.io/version: v1
    spec:
      containers:
        - name: server
          image: yourselfhosted/slash:latest
          ports:
            - containerPort: 5231
          volumeMounts:
            - name: slash-data
              mountPath: /var/opt/slash
      volumes:
        - name: slash-data
          persistentVolumeClaim:
            claimName: slash-pvc
